<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:background="@drawable/img_serch_top_backg"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:id="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingTop="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/IMG_icon_drwaer"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_menu_drwaer" />

        <com.happywannyan.Font.SFNFTextView
            android:id="@+id/PAGE_Titile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/all_messages"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/page_titiel" />
    </RelativeLayout>
    <HorizontalScrollView
        android:id="@+id/H_SCROLL"
        android:layout_below="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:background="@color/colorwhite"
        android:layout_height="56dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            >

            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_up_coming"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/up_coming_booking"
                android:textSize="14sp"
                android:textColor="@color/text_dark_gray"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>

            <View
                android:id="@+id/view_between_upcoming_current_booking"
                android:layout_gravity="center"
                android:layout_width="1dip"
                android:layout_height="15dp"
                android:background="@color/gray_project"
                />

            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_current"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/current_booking"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>

            <View
                android:id="@+id/view_between_current_pending_booking"
                android:layout_gravity="center"
                android:layout_width="1dip"
                android:layout_height="15dp"
                android:background="@color/gray_project"
                />
            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_pending"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pending_booking"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>

            <View
                android:id="@+id/view_between_pending_past"
                android:layout_gravity="center"
                android:layout_width="1dip"
                android:layout_height="15dp"
                android:background="@color/gray_project"
                />

            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_past"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/past_booking"
                android:textColor="@color/text_dark_gray"
                android:textSize="14sp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"/>
        </LinearLayout>

    </HorizontalScrollView>


    <View
        android:layout_above="@+id/rcv_upcoming_booking"
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:background="@color/gray_project"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/H_SCROLL"
        android:id="@+id/rcv_upcoming_booking"
        android:orientation="vertical"
        android:background="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
